--- a/exercises/lecture-11/template/app.css
+++ b/exercises/lecture-11/template/app.css
@@ -9,7 +9,7 @@
   display: grid;
   gap: 1rem;
 
-  grid-template-columns: repeat(auto-fit, minmax(var(--min), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--min)), 1fr));
 }
 
 body {
