--- a/explore-and-travel/common.css
+++ b/explore-and-travel/common.css
@@ -1,3 +1,5 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css');
+
 :root {
   --font-family: "Inter", sans-serif;
   --second-family: "Mulish", sans-serif;
