--- a/explore-and-travel/main.css
+++ b/explore-and-travel/main.css
@@ -89,22 +89,15 @@ body {
 }
 
 .section {
-    /* background-color: #fff; */
-    border: 1px solid #ccc;
     height: fit-content;
-}
-
-.footer {
-    grid-area: footer;
-    background-color: #343A40;
-    color: white;
-    text-align: center;
+    position: relative;
 }
 
 #section1 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: 270px;
+
 }
 
 #section1 .thousand-01 img {
@@ -166,22 +159,106 @@ button[type="submit"]:hover {
     border-style: hidden;
 }
 
-#pointer1 {
-    position: relative;
-    left: -70px;
-    top: 195px;
+.element {
+    position: absolute;
+    z-index: 1000;
 }
 
-#pointer2 {
-    position: absolute;
-    left: 870px;
-    top: 180px;
+#element {
+    left: 570px;
+    top: 645px;    
+}
+
+#element2 {
+    left: -85px;
+    top: 370px;
+}
+
+#element3 {
+    left: 530px;
+    top: 45px;
 }
 
 #section2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: 270px;
+}
+
+#element4 {
+    left: 680px;
+    transform: rotate(8deg);
+}
+
+#element5 {
+    top: 350px;
+    left: 1080px;
+    transform: rotate(8deg);
+}
+
+#element6 {
+    left: -85px;
+    top: 310px;
+    transform: rotate(8deg);
+}
+
+#element7{
+    top: -10px;
+    left: 1000px;
+}
+
+#element8{
+    top: 450px;
+    left: 550px;
+}
+
+#element9{
+    left: 1300px;
+    top: 50px;
+    transform: rotate(8deg);
+}
+
+#element10{
+    top: 390px;
+    left: 470px;
+    transform: rotate(30deg);
+}
+
+#element11{
+    top: 50px;
+    left: 100px;
+}
+
+#element12{
+    top: 300px;
+    left: -85px;
+}
+
+#element13{
+    top: 50px;
+    left: 1067px;
+    z-index: -1000;
+}
+
+#element14{
+    top: 532px;
+    left: 685px;
+}
+
+#element15{
+    top: 600px;
+    left: 805px;
+}
+
+#element16{
+    top: 355px;
+    left: -85px;
+}
+
+#element17{
+    top: -70px;
+    left: 460px;
+    transform: rotate(8deg);
 }
 
 .thousand-02 img {
@@ -226,7 +303,7 @@ h2 {
     align-items: baseline;
 }
 
-.features-destinations-header > a{
+.features-destinations-header>a {
     font-weight: 600;
     font-size: 17px;
     line-height: 353%;
@@ -238,7 +315,6 @@ h2 {
     flex-direction: row;
     justify-content: space-between;
     margin-top: 30px;
-    /* padding: 0 25px; */
 }
 
 .features-destinations-block-item {
@@ -277,15 +353,15 @@ h2 {
 }
 
 #section4 {
-    margin-bottom: 20px;
+    margin-bottom: 240px;
     padding: 0 50px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
 
-.thousand-03-text{
-    margin-top: 230px;
+.thousand-03-text {
+    margin-top: 130px;
 }
 
 .thousand-03-text>p {
@@ -297,4 +373,226 @@ h2 {
     padding-bottom: 33px;
     padding-top: 20px;
     max-width: 80%;
+}
+
+#section5 {
+    margin-bottom: 270px;
+    padding: 0 50px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.testimonials-text {
+    max-width: 450px;
+}
+
+.testimonials-text-stars {
+    margin-top: 145px;
+}
+
+.testimonials-desc-info {
+    margin-top: 30px;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 150%;
+    color: #000;
+
+}
+
+.testimonials-desc-author {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 218%;
+    color: #000;
+}
+
+.testimonials-desc-title {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 267%;
+    color: rgba(0, 0, 0, 0.85);
+}
+
+.testimonials-img {
+    margin: 0 auto;
+    padding-top: 60px;
+    position: relative;
+}
+
+.testimonials-img img {
+    width: 384px;
+    height: 491px;
+    border-radius: 8px;
+}
+
+.testimonials-img-controls {
+    border-radius: 16px 0 0 0;
+    width: 132px;
+    height: 60px;
+    position: absolute;
+    left: 252px;
+    bottom: 3px;
+    z-index: 1000;
+    background-color: white;
+    padding-top: 20px;
+    padding-left: 30px;
+}
+
+.testimonials-img-controls img {
+    width: 40px;
+    height: 40px;
+    margin-left: 8px;
+}
+
+.testimonials-img-controls a {
+    text-decoration: none;
+}
+
+#section6 {
+    margin-bottom: 270px;
+    padding: 0 50px;
+}
+
+.trending-stories-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.trending-stories-header>a {
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 353%;
+    color: #fb8f1d;
+}
+
+.trending-stories-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.trending-stories-block-item {
+    width: 260px;
+}
+
+.trending-stories-block-img-container {
+    width: 260px;
+    height: 231px;
+    overflow: hidden;
+    border-radius: 8px 8px 0 0;
+}
+
+.trending-stories-block-title {
+    margin-top: 13px;
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 158%;
+    color: #000;
+}
+
+.trending-stories-block-desc {
+    margin-top: 13px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 173%;
+    color: #7d7987;
+}
+
+.trending-stories-block-readmore {
+    margin-top: 23px;
+}
+
+.trending-stories-block-readmore a {
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 187%;
+    color: #fb8f1d;
+}
+
+.footer {
+    grid-area: footer;
+    /* justify-content: space-between; */
+
+}
+
+#footer-block-1 {
+    display: grid;
+    grid-template-columns: 40% 20% 20% 20%;
+    gap: 10px;
+}
+
+footer p {
+    font-family: var(--second-family);
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 156%;
+    color: #848484;
+}
+
+footer ul {
+    list-style: none;
+}
+
+footer ul li{
+    margin-bottom: 8px;
+}
+
+footer ul a{
+    text-decoration: none;
+    font-family: var(--second-family);
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 156%;
+    color: #848484;
+}
+
+#footer-info p:nth-of-type(1) {
+    margin-top: 26px;
+    max-width: 310px;
+}
+
+#footer-info p:nth-of-type(2) {
+    margin-top: 55px;
+}
+
+#footer-info img {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-links p {
+    font-family: var(--second-family);
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 316%;
+    color: #000;
+}
+
+#footer-block-2 {
+    margin-top: 80px;
+    height: 84px;
+    border-top: #C4C4C4 2px solid;
+}
+
+#footer-block-2 ul {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
+
+}
+
+#footer-block-2 li{
+    float: left;
+    margin: 0 10px;
+
+}
+
+#footer-block-2 i{
+    font-size: x-large;
+    color: #000;    
 }
