--- a/explore-and-travel/main.css
+++ b/explore-and-travel/main.css
@@ -802,6 +802,7 @@ footer ul a{
     #section1 .thousand-01 img {
         position: relative;
         left: 0px;
+        width: 100%;
     }
 
     .thousand-02 img {
@@ -811,8 +812,11 @@ footer ul a{
     }
 
     .testimonials-img img {
-        width: 100%;
         border-radius: 8px;
+    }
+
+    .thousand-03 img{
+        width: 100%;
     }
 
     #footer-info{
